Fixed h2 header alignment for profile and monument pages

--- a/src/Monubit/MonumentBundle/Resources/public/css/monument.css
+++ b/src/Monubit/MonumentBundle/Resources/public/css/monument.css
@@ -1,3 +1,6 @@
+div.recommended h2 {
+	padding-left: 0px;
+}
 div.right, div.left, div.content {
     float:left;
 }
