--- a/web/css/base.css
+++ b/web/css/base.css
@@ -22,7 +22,6 @@ h1,h2,h3 {
 
 h2 {
 	font-size: 22px;
-	padding-left: 0px;
 }
 
 h3 {
